--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "gulp": "^3.9.1"
   },
   "devDependencies": {
+    "del": "^2.2.2",
     "gulp-concat": "^2.6.0",
     "gulp-inject": "^4.1.0"
   },
